// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Extracts TOC When maxDepth is not set it should have extracted TOC correctly 1`] = `
[
  [
    "README.md",
    [],
  ],
  [
    "docs/about.md",
    [
      {
        "depth": 2,
        "id": "history",
        "title": "History",
      },
      {
        "depth": 2,
        "headings": [
          {
            "depth": 3,
            "id": "but-why",
            "title": "But why?",
          },
        ],
        "id": "where-it-came-from",
        "title": "Where it came from",
      },
      {
        "depth": 2,
        "id": "another-topic",
        "title": "Another topic",
      },
      {
        "depth": 2,
        "headings": [
          {
            "depth": 3,
            "id": "3-level",
            "title": "3 level",
          },
          {
            "depth": 3,
            "headings": [
              {
                "depth": 4,
                "headings": [
                  {
                    "depth": 5,
                    "headings": [
                      {
                        "depth": 6,
                        "id": "6-level",
                        "title": "6 level",
                      },
                    ],
                    "id": "5-level",
                    "title": "5 level",
                  },
                ],
                "id": "4-level",
                "title": "4 level",
              },
              {
                "depth": 4,
                "id": "4-level-2nd",
                "title": "4 level 2nd",
              },
            ],
            "id": "3-level-2nd",
            "title": "3 level 2nd",
          },
        ],
        "id": "2-level",
        "title": "2 level",
      },
    ],
  ],
  [
    "docs/custom-url.md",
    [],
  ],
  [
    "docs/how-it-works.md",
    [],
  ],
  [
    "docs/html.md",
    [],
  ],
  [
    "docs/math.md",
    [],
  ],
  [
    "docs/static-asset.md",
    [],
  ],
  [
    "docs/table.md",
    [],
  ],
  [
    "packages/package1/components/button.md",
    [],
  ],
  [
    "packages/package1/docs/intro.md",
    [],
  ],
  [
    "packages/package2/docs/overview.md",
    [],
  ],
  [
    "packages/package2/docs/styles.md",
    [],
  ],
  [
    "packages/package1/components/form/index.md",
    [],
  ],
  [
    "packages/package1/components/form/something-else.md",
    [],
  ],
]
`;

exports[`Extracts TOC When maxDepth is set it should have extracted TOC correctly 1`] = `
[
  [
    "README.md",
    [],
  ],
  [
    "docs/about.md",
    [
      {
        "depth": 2,
        "id": "history",
        "title": "History",
      },
      {
        "depth": 2,
        "headings": [
          {
            "depth": 3,
            "id": "but-why",
            "title": "But why?",
          },
        ],
        "id": "where-it-came-from",
        "title": "Where it came from",
      },
      {
        "depth": 2,
        "id": "another-topic",
        "title": "Another topic",
      },
      {
        "depth": 2,
        "headings": [
          {
            "depth": 3,
            "id": "3-level",
            "title": "3 level",
          },
          {
            "depth": 3,
            "headings": [
              {
                "depth": 4,
                "id": "4-level",
                "title": "4 level",
              },
              {
                "depth": 4,
                "id": "4-level-2nd",
                "title": "4 level 2nd",
              },
            ],
            "id": "3-level-2nd",
            "title": "3 level 2nd",
          },
        ],
        "id": "2-level",
        "title": "2 level",
      },
    ],
  ],
  [
    "docs/custom-url.md",
    [],
  ],
  [
    "docs/how-it-works.md",
    [],
  ],
  [
    "docs/html.md",
    [],
  ],
  [
    "docs/math.md",
    [],
  ],
  [
    "docs/static-asset.md",
    [],
  ],
  [
    "docs/table.md",
    [],
  ],
  [
    "packages/package1/components/button.md",
    [],
  ],
  [
    "packages/package1/docs/intro.md",
    [],
  ],
  [
    "packages/package2/docs/overview.md",
    [],
  ],
  [
    "packages/package2/docs/styles.md",
    [],
  ],
  [
    "packages/package1/components/form/index.md",
    [],
  ],
  [
    "packages/package1/components/form/something-else.md",
    [],
  ],
]
`;
